add changes to stats in dashboard to handle parametric and nonparametric

--- a/ca2-sem1/dashboards.ipynb
+++ b/ca2-sem1/dashboards.ipynb
@@ -327,6 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This will load in the models pre-trained using Meta Prophet to make predictions on Yield and Production of different crops\n",
     "MODELS_LOADED_IN = utils.load_in_prophet_models('prophet_models')"
    ]
   },
@@ -355,7 +356,7 @@
    "outputs": [],
    "source": [
     "    \n",
-    "    \n",
+    "# Create geo plot (cholopleth) with year animation and sets the frame duration to 60 secs\n",
     "def create_map(df, crop, metric):\n",
     "    data = df[df.item == crop]\n",
     "   \n",
@@ -379,6 +380,8 @@
     "    return fig\n",
     "\n",
     "\n",
+    "# Draws up existing (available) data for a given crop and coutry and makes a prediction in the year-range defined by the `predict` argument\n",
+    "# This easily facilitates uodating the chart based on the SliderRange\n",
     "def predict_and_graph(df, item, metric, area, predict):\n",
     "    data = df[(df.area == area) & (df.item == item)].reset_index().sort_values(by='year')\n",
     "    \n",
@@ -453,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -615,11 +618,49 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x126b010d0>"
+       "<IPython.lib.display.IFrame at 0x12d34ee50>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.11/site-packages/scipy/stats/_stats_py.py:1171: RuntimeWarning:\n",
+      "\n",
+      "Mean of empty slice.\n",
+      "\n",
+      "/usr/local/lib/python3.11/site-packages/numpy/core/_methods.py:121: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in divide\n",
+      "\n",
+      "/usr/local/lib/python3.11/site-packages/numpy/core/fromnumeric.py:3504: RuntimeWarning:\n",
+      "\n",
+      "Mean of empty slice.\n",
+      "\n",
+      "/usr/local/lib/python3.11/site-packages/numpy/core/_methods.py:129: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "/usr/local/lib/python3.11/site-packages/scipy/stats/_stats_py.py:1171: RuntimeWarning:\n",
+      "\n",
+      "Mean of empty slice.\n",
+      "\n",
+      "/usr/local/lib/python3.11/site-packages/numpy/core/_methods.py:121: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in divide\n",
+      "\n",
+      "/usr/local/lib/python3.11/site-packages/numpy/core/fromnumeric.py:3504: RuntimeWarning:\n",
+      "\n",
+      "Mean of empty slice.\n",
+      "\n",
+      "/usr/local/lib/python3.11/site-packages/numpy/core/_methods.py:129: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -654,20 +695,34 @@
     "    Input(\"geo-metric\", \"value\"),  # comes from geo selection to make the dahsboard more coherent\n",
     "    Input(\"stats-year\", \"value\"))\n",
     "def update_stats(area1, area2, crop, metric, year):\n",
-    "    result = \"**differences**\"\n",
-    "    msg = f\"With a 5% significance level, there is enough evidence to say that there are {result} between {area1} and {area2} production of {crop} as observed from year {year} until 2022.\"\n",
-    "    \n",
-    "    X1 = filter_df(fao_raw_percentiles_df, crop, metric, area1, year)\n",
-    "    X2 = filter_df(fao_raw_percentiles_df, crop, metric, area2, year)\n",
-    "\n",
-    "    t_test = stats.ttest_ind(X1.value, X2.value, equal_var = False)\n",
     "    alpha = 0.05\n",
     "    \n",
-    "    if t_test.pvalue >= alpha:\n",
-    "        result = \"**no differences**\"\n",
-    "        return msg\n",
+    "    try: \n",
+    "        X1 = filter_df(fao_raw_percentiles_df, crop, metric, area1, year)\n",
+    "        X2 = filter_df(fao_raw_percentiles_df, crop, metric, area2, year)\n",
     "    \n",
-    "    return msg\n",
+    "        _, p1 = stats.normaltest(X1.value)\n",
+    "        _, p2 = stats.normaltest(X2.value)\n",
+    "        \n",
+    "        testType = \"Wilcoxon\"\n",
+    "        if p1 >= alpha and p2 >= alpha:\n",
+    "            result = stats.ttest_ind(X1.value, X2.value, equal_var = False)\n",
+    "            testType = 'T test'\n",
+    "        else:\n",
+    "            result = stats.wilcoxon(X1.value, X2.value)\n",
+    "    \n",
+    "    \n",
+    "        resultMsg = \"**differences**\"\n",
+    "        msg = (f\"With a 5% significance level, there is enough evidence to say that there are {resultMsg} between {area1} and {area2} {metric} \"\n",
+    "               f\"of {crop} as observed from year {year} until 2022.\\n A {testType} was performed on the data\")\n",
+    "            \n",
+    "        if result.pvalue >= alpha:\n",
+    "            resultMsg = \"**no differences**\"\n",
+    "            return msg\n",
+    "        \n",
+    "        return msg\n",
+    "    except Exception as e:\n",
+    "        return \"Could not run statistical tests, as not enough underlying data exists.\"\n",
     "\n",
     "\n",
     "@app.callback([\n",
