--- a/ca2-sem1/ca2.ipynb
+++ b/ca2-sem1/ca2.ipynb
@@ -1199,7 +1199,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x12f88c950>"
+       "<IPython.lib.display.IFrame at 0x12eed8c50>"
       ]
      },
      "metadata": {},
@@ -1267,7 +1267,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x12f88c950>"
+       "<IPython.lib.display.IFrame at 0x12f1e5590>"
       ]
      },
      "metadata": {},
@@ -1986,11 +1986,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3356d5c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 175319.9411764706\n",
+      "95% Confidence interval: (159225.23203527552, 191414.65031766568)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the sample mean and standard error\n",
+    "data = utils.filter_df(df, 'Oats', 'Production', 'Ireland', 2006).value\n",
+    "mean = np.mean(data)\n",
+    "sem = stats.sem(data)  # Standard error of the mean\n",
+    "\n",
+    "# Calculate the confidence interval\n",
+    "confidence_level = 0.95\n",
+    "confidence_interval = stats.t.interval(confidence_level, len(data)-1, loc=mean, scale=sem)\n",
+    "\n",
+    "print(\"Mean:\", mean)\n",
+    "print(\"95% Confidence interval:\", confidence_interval)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c82e480a",
    "metadata": {},
    "source": [
-    "### Check whether Barley production in Ireland is normally distributed.\n",
+    "### Normality & Other Tests\n",
     "Null Hypothesis H0: Barley production in Ireland follows normal distribution."
    ]
   },
