resolve conflict in instructions

--- a/ca4/dashboard.ipynb
+++ b/ca4/dashboard.ipynb
@@ -2,6 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pymongo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpymongo\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpymongo\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MongoClient\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Connect to MongoDB\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pymongo'"
+     ]
+    }
+   ],
+   "source": [
+    "import pymongo\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "# Connect to MongoDB\n",
+    "client = MongoClient('mongodb://localhost:27017/')  # MongoDB connection string\n",
+    "db = client['stocks']  # database name\n",
+    "collection = db['PROCESSED_DB']  # collection name"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -16,28 +43,6 @@
      ]
     }
    ],
-   "source": [
-    "from pyspark.sql import SparkSession\n",
-    "\n",
-    "# Initialize the Spark session\n",
-    "spark = SparkSession.builder \\\n",
-    "    .appName(\"MongoDBIntegration\") \\\n",
-    "    .config(\"spark.mongodb.input.uri\", \"mongodb://localhost:27017/stocks.PROCESSED_DB\") \\\n",
-    "    .config(\"spark.mongodb.output.uri\", \"mongodb://localhost:27017/stocks.PROCESSED_DB\") \\\n",
-    "    .getOrCreate()\n",
-    "\n",
-    "# Read data from MongoDB\n",
-    "df = spark.read.format(\"mongo\").load()\n",
-    "\n",
-    "# Convert to Pandas DataFrame\n",
-    "merged_df = df.toPandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import dash\n",
     "from dash import dcc, html\n",
@@ -137,8 +142,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
