add mongo and spark comms

--- a/ca4/dashboard.ipynb
+++ b/ca4/dashboard.ipynb
@@ -2,44 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pymongo'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpymongo\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpymongo\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MongoClient\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Connect to MongoDB\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pymongo'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "merged_df = pd.read_csv('data/merged_df.csv')\n",
+    "\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
     "\n",
-    "# Connect to MongoDB\n",
-    "client = MongoClient('mongodb://localhost:27017/')  # MongoDB connection string\n",
-    "db = client['stocks']  # database name\n",
-    "collection = db['PROCESSED_DB']  # collection name"
+    "# # Connect to MongoDB\n",
+    "client = MongoClient('mongodb://localhost:27017/')  # MongoDB connection string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.11.5' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x134ef8ad0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pymongo.synchronous.cursor.Cursor object at 0x13560c3d0>\n"
      ]
     }
    ],
@@ -53,21 +67,27 @@
     "from tensorflow.keras.models import load_model\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
+    "from tensorflow.keras.models import model_from_json\n",
+    "\n",
     "# Load the dataset (assuming merged_df is already loaded)\n",
     "# merged_df = pd.read_csv('path_to_wer_merged_df.csv')\n",
     "\n",
     "# Initialize the Dash app\n",
     "app = dash.Dash(__name__)\n",
     "\n",
-    "app.lawet = html.Div([\n",
+    "dropdown_options = ['TSLA', 'AAPL', 'GOOG', 'AMZN', 'MSFT']\n",
+    "\n",
+    "app.layout = html.Div([\n",
     "    html.H1(\"Stock Price Prediction Dashboard\"),\n",
-    "    html.Div([\n",
-    "        html.Label(\"Ticker Symbol:\"),\n",
-    "        dcc.Input(id='ticker-input', type='text', value='TSLA'),\n",
-    "    ]),\n",
+    "    dcc.Dropdown(\n",
+    "        id='stock-dropdown',\n",
+    "        options=dropdown_options,\n",
+    "        value='AAPL',  # Default value\n",
+    "        placeholder=\"Select a stock\"\n",
+    "    ),\n",
     "    html.Div([\n",
     "        html.Label(\"Sequence Length:\"),\n",
-    "        dcc.Input(id='seq-length-input', type='number', value=60),\n",
+    "        dcc.Input(id='seq-length-input', type='number', value=7),\n",
     "    ]),\n",
     "    html.Button('Predict', id='predict-button', n_clicks=0),\n",
     "    html.Div(id='prediction-output'),\n",
@@ -77,51 +97,61 @@
     "@app.callback(\n",
     "    [Output('prediction-output', 'children'),\n",
     "     Output('prediction-graph', 'figure')],\n",
+    "\n",
     "    [Input('predict-button', 'n_clicks')],\n",
-    "    [State('ticker-input', 'value'),\n",
-    "     State('seq-length-input', 'value')]\n",
+    "    [Input('stock-dropdown', 'value'),\n",
+    "     Input('seq-length-input', 'value')]\n",
     ")\n",
     "def update_prediction(n_clicks, ticker, seq_length):\n",
     "    if n_clicks == 0:\n",
     "        return \"\", {}\n",
     "\n",
     "    # Load the pre-trained model\n",
-    "    model = load_model(f'model_{ticker}.h5')\n",
+    "    model = load_model(f'models/rnn/{ticker}_{seq_length}.keras')\n",
+    "\n",
+    "    ticker_df = merged_df[merged_df['ticker'] == ticker]\n",
+    "\n",
+    "    data, labels = prep_ticker_data(ticker, merged_df)\n",
+    "    X_train, X_test, y_train, y_test, scaler, split = scale_and_split(labels, seq_length)\n",
+    "\n",
+    "    predictions = model.predict(X_test)\n",
+    "    predictions = scaler.inverse_transform(predictions)\n",
+    "\n",
+    "    return \"\", {}\n",
     "\n",
     "    # Make predictions\n",
-    "    predictions = model.predict(X)\n",
-    "    predictions = scaler_target.inverse_transform(predictions)\n",
+    "    # predictions = model.predict(['2022-10-13'])\n",
     "\n",
-    "    # Create the Plotly figure\n",
-    "    fig = go.Figure()\n",
+    "    # # Create the Plotly figure\n",
+    "    # fig = go.Figure()\n",
     "\n",
-    "    # Add the actual closing price trace\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=ticker_df['date'][seq_length:],\n",
-    "        y=target[seq_length:],\n",
-    "        mode='lines',\n",
-    "        name='Actual Closing Price',\n",
-    "        line=dict(color='blue')\n",
-    "    ))\n",
+    "    # # Add the actual closing price trace\n",
+    "    # fig.add_trace(go.Scatter(\n",
+    "    #     x=ticker_df['date'][seq_length:],\n",
+    "    #     y=ticker_df['close'][seq_length:],\n",
+    "    #     mode='lines',\n",
+    "    #     name='Actual Closing Price',\n",
+    "    #     line=dict(color='blue')\n",
+    "    # ))\n",
     "\n",
-    "    # Add the predicted closing price trace\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=ticker_df['date'][seq_length:],\n",
-    "        y=predictions.flatten(),\n",
-    "        mode='lines',\n",
-    "        name='Predicted Closing Price',\n",
-    "        line=dict(color='red')\n",
-    "    ))\n",
+    "    # # Add the predicted closing price trace\n",
+    "    # fig.add_trace(go.Scatter(\n",
+    "    #     x=ticker_df['date'][seq_length:],\n",
+    "    #     y=predictions.flatten(),\n",
+    "    #     mode='lines',\n",
+    "    #     name='Predicted Closing Price',\n",
+    "    #     line=dict(color='red')\n",
+    "    # ))\n",
     "\n",
-    "    # Update the lawet\n",
-    "    fig.update_lawet(\n",
-    "        title=f'{ticker} Closing Price Prediction',\n",
-    "        xaxis_title='Date',\n",
-    "        yaxis_title='Closing Price',\n",
-    "        legend=dict(x=0, y=1)\n",
-    "    )\n",
+    "    # # Update the lawet\n",
+    "    # fig.update_lawet(\n",
+    "    #     title=f'{ticker} Closing Price Prediction',\n",
+    "    #     xaxis_title='Date',\n",
+    "    #     yaxis_title='Closing Price',\n",
+    "    #     legend=dict(x=0, y=1)\n",
+    "    # )\n",
     "\n",
-    "    return f\"Predicted closing price for {ticker}: {predictions[-1][0]:.2f}\", fig\n",
+    "    # return f\"Predicted closing price for {ticker}: {predictions[-1][0]:.2f}\", fig\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True)"
@@ -151,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
