--- a/ca4/dashboard.ipynb
+++ b/ca4/dashboard.ipynb
@@ -2,14 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import dash\n",
+    "from dash import dcc, html\n",
+    "from dash.dependencies import Input, Output, State\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import plotly.graph_objects as go\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "from tensorflow.keras.models import model_from_json\n",
+    "\n",
+    "import mlutils\n",
+    "import pickle"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +39,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_all_ticker_data(ticker):\n",
+    "    print(\"Pulling raw ticker data\")\n",
+    "    merged_df[merged_df['ticker'] == ticker]\n",
+    "    return merged_df[merged_df['ticker'] == ticker]\n",
+    "\n",
+    "    db = client['stocks']\n",
+    "    collection = db['prepared_data']\n",
+    "    data = collection.find({\"ticker\": ticker})\n",
+    "    return pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_RNN(ticker_df, ticker, seq_length, pred_dates_range):\n",
+    "    # Load the pre-trained model\n",
+    "    model = load_model(f'models/rnn/{ticker}_{seq_length}.keras')\n",
+    "    if model:\n",
+    "        print(f\"RNN Model loaded for {ticker}_{seq_length}.keras\")\n",
+    "\n",
+    "    data, labels = mlutils.prep_ticker_data(ticker, ticker_df)\n",
+    "    _, X_test, _, _, scaler, split = mlutils.scale_and_split(labels, seq_length)\n",
+    "\n",
+    "    predictions = model.predict(X_test)\n",
+    "    predictions = scaler.inverse_transform(predictions)\n",
+    "\n",
+    "    # Create the Plotly figure\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    # Add the actual closing price trace\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=ticker_df['date'],\n",
+    "        y=ticker_df['close'][seq_length:],\n",
+    "        mode='lines',\n",
+    "        name='Actual Closing Price',\n",
+    "        line=dict(color='blue')\n",
+    "    ))\n",
+    "\n",
+    "    # Add the predicted closing price trace\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=ticker_df['date'][split + seq_length:],\n",
+    "        y=predictions.flatten(),\n",
+    "        mode='lines',\n",
+    "        name='Predicted Closing Price',\n",
+    "        line=dict(color='green')\n",
+    "    ))\n",
+    "\n",
+    "    # Add the predicted closing price trace for new dates\n",
+    "    new_dates = pd.date_range(ticker_df['date'][split + seq_length:].iloc[-1], periods=pred_dates_range, freq='D')\n",
+    "    predictions_new = model.predict(X_test)\n",
+    "    predictions_new = scaler.inverse_transform(predictions_new)\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=new_dates,\n",
+    "        y=predictions.flatten(),\n",
+    "        mode='lines',\n",
+    "        name='Predicted New Dates',\n",
+    "        line=dict(color='red')\n",
+    "    ))\n",
+    "\n",
+    "    # Update the layout\n",
+    "    fig.update_layout(\n",
+    "        title=f'{ticker} Closing Price Prediction',\n",
+    "        xaxis_title='Date',\n",
+    "        yaxis_title='Closing Price',\n",
+    "        legend=dict(x=0, y=1)\n",
+    "    )\n",
+    "\n",
+    "    return f\"Predicted closing price for {ticker}: {predictions_new[-1][0]:.2f}\", fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "steps = 14\n",
+    "\n",
+    "def predict_Exo(t_df, ticker, seq_length, pred_dates_range):\n",
+    "    t_df = t_df.sort_values('date')\n",
+    "    t_df['date'] = pd.to_datetime(t_df['date'])\n",
+    "    data = t_df.set_index('date')\n",
+    "    data = data.asfreq('D')\n",
+    "    data = data.sort_index()\n",
+    "    data = data.fillna(method='ffill')\n",
+    "    data_train = data[:-steps]\n",
+    "    data_test  = data[-steps:]\n",
+    "    \n",
+    "    # Load the model from a file\n",
+    "    with open('forecaster_autoreg.pkl', 'rb') as file:\n",
+    "        loaded_forecaster = pickle.load(file)\n",
+    "        print(\"Model loaded successfully!\")\n",
+    "\n",
+    "    predictions = loaded_forecaster.predict(steps=steps, exog=data_test[['bert_score', 'bert_label', 'num_tweets']])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +162,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x134ef8ad0>"
+       "<IPython.lib.display.IFrame at 0x138b0aa90>"
       ]
      },
      "metadata": {},
@@ -53,25 +172,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pymongo.synchronous.cursor.Cursor object at 0x13560c3d0>\n"
+      "Pulling raw ticker data\n",
+      "RNN Model loaded for AAPL_7.keras\n",
+      "2/2 [==============================] - 4s 137ms/step\n",
+      "2/2 [==============================] - 0s 109ms/step\n"
      ]
     }
    ],
    "source": [
-    "import dash\n",
-    "from dash import dcc, html\n",
-    "from dash.dependencies import Input, Output, State\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import plotly.graph_objects as go\n",
-    "from tensorflow.keras.models import load_model\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "from tensorflow.keras.models import model_from_json\n",
-    "\n",
-    "# Load the dataset (assuming merged_df is already loaded)\n",
-    "# merged_df = pd.read_csv('path_to_wer_merged_df.csv')\n",
-    "\n",
     "# Initialize the Dash app\n",
     "app = dash.Dash(__name__)\n",
     "\n",
@@ -79,79 +187,53 @@
     "\n",
     "app.layout = html.Div([\n",
     "    html.H1(\"Stock Price Prediction Dashboard\"),\n",
-    "    dcc.Dropdown(\n",
-    "        id='stock-dropdown',\n",
-    "        options=dropdown_options,\n",
-    "        value='AAPL',  # Default value\n",
-    "        placeholder=\"Select a stock\"\n",
-    "    ),\n",
+    "    \n",
     "    html.Div([\n",
-    "        html.Label(\"Sequence Length:\"),\n",
-    "        dcc.Input(id='seq-length-input', type='number', value=7),\n",
-    "    ]),\n",
+    "        html.Div([\n",
+    "        html.Label(\"Ticket Symbol:\"),\n",
+    "        dcc.Dropdown(\n",
+    "            id='stock-dropdown',\n",
+    "            options=dropdown_options,\n",
+    "            value='AAPL',  # Default value\n",
+    "            placeholder=\"Select a stock\"\n",
+    "        )], style={'width': '33%'}),\n",
+    "        html.Div([\n",
+    "            html.Label(\"Sequence Length\"),\n",
+    "            dcc.Dropdown(id='seq-length-input', options=[1, 3, 7], value=7),\n",
+    "        ], style={'width': '33%'}),\n",
+    "        html.Div([\n",
+    "            html.Label(\"Prediction Days Ahead\"),\n",
+    "            dcc.Input(id='predict-dates-input', type='number', value=40),\n",
+    "        ], style={'width': '33%'}),\n",
+    "    ], style={'margin-top': '20px', 'display': 'flex', 'width': '100%'}),\n",
+    "\n",
     "    html.Button('Predict', id='predict-button', n_clicks=0),\n",
-    "    html.Div(id='prediction-output'),\n",
-    "    dcc.Graph(id='prediction-graph')\n",
-    "])\n",
+    "\n",
+    "    # Output Graphs\n",
+    "    html.Div([\n",
+    "        html.Div(id='prediction-output'),\n",
+    "        dcc.Graph(id='prediction-graph-rnn')\n",
+    "    ], style={'margin-top': '20px', 'width': '100%'})\n",
+    "], style={'background': 'white', 'margin': 'auto'})\n",
     "\n",
     "@app.callback(\n",
     "    [Output('prediction-output', 'children'),\n",
-    "     Output('prediction-graph', 'figure')],\n",
+    "     Output('prediction-graph-rnn', 'figure')],\n",
     "\n",
     "    [Input('predict-button', 'n_clicks')],\n",
     "    [Input('stock-dropdown', 'value'),\n",
-    "     Input('seq-length-input', 'value')]\n",
+    "     Input('seq-length-input', 'value'),\n",
+    "     Input('predict-dates-input', 'value')]\n",
     ")\n",
-    "def update_prediction(n_clicks, ticker, seq_length):\n",
+    "def update_prediction(n_clicks, ticker, seq_length, pred_dates_range):\n",
     "    if n_clicks == 0:\n",
     "        return \"\", {}\n",
     "\n",
-    "    # Load the pre-trained model\n",
-    "    model = load_model(f'models/rnn/{ticker}_{seq_length}.keras')\n",
+    "   # Load the raw data for graphing\n",
+    "    ticker_df = get_all_ticker_data(ticker)\n",
     "\n",
-    "    ticker_df = merged_df[merged_df['ticker'] == ticker]\n",
-    "\n",
-    "    data, labels = prep_ticker_data(ticker, merged_df)\n",
-    "    X_train, X_test, y_train, y_test, scaler, split = scale_and_split(labels, seq_length)\n",
-    "\n",
-    "    predictions = model.predict(X_test)\n",
-    "    predictions = scaler.inverse_transform(predictions)\n",
-    "\n",
-    "    return \"\", {}\n",
-    "\n",
-    "    # Make predictions\n",
-    "    # predictions = model.predict(['2022-10-13'])\n",
-    "\n",
-    "    # # Create the Plotly figure\n",
-    "    # fig = go.Figure()\n",
-    "\n",
-    "    # # Add the actual closing price trace\n",
-    "    # fig.add_trace(go.Scatter(\n",
-    "    #     x=ticker_df['date'][seq_length:],\n",
-    "    #     y=ticker_df['close'][seq_length:],\n",
-    "    #     mode='lines',\n",
-    "    #     name='Actual Closing Price',\n",
-    "    #     line=dict(color='blue')\n",
-    "    # ))\n",
-    "\n",
-    "    # # Add the predicted closing price trace\n",
-    "    # fig.add_trace(go.Scatter(\n",
-    "    #     x=ticker_df['date'][seq_length:],\n",
-    "    #     y=predictions.flatten(),\n",
-    "    #     mode='lines',\n",
-    "    #     name='Predicted Closing Price',\n",
-    "    #     line=dict(color='red')\n",
-    "    # ))\n",
-    "\n",
-    "    # # Update the lawet\n",
-    "    # fig.update_lawet(\n",
-    "    #     title=f'{ticker} Closing Price Prediction',\n",
-    "    #     xaxis_title='Date',\n",
-    "    #     yaxis_title='Closing Price',\n",
-    "    #     legend=dict(x=0, y=1)\n",
-    "    # )\n",
-    "\n",
-    "    # return f\"Predicted closing price for {ticker}: {predictions[-1][0]:.2f}\", fig\n",
+    "    pred_price, graph_rnn = predict_RNN(ticker_df, ticker, seq_length, pred_dates_range)\n",
+    "    return pred_price, graph_rnn\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True)"
