check data stationary

--- a/ca4/dashboard.ipynb
+++ b/ca4/dashboard.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x138b0aa90>"
+       "<IPython.lib.display.IFrame at 0x138a45f50>"
       ]
      },
      "metadata": {},
@@ -173,9 +173,13 @@
      "output_type": "stream",
      "text": [
       "Pulling raw ticker data\n",
+      "Pulling raw ticker data\n",
       "RNN Model loaded for AAPL_7.keras\n",
-      "2/2 [==============================] - 4s 137ms/step\n",
-      "2/2 [==============================] - 0s 109ms/step\n"
+      "RNN Model loaded for AAPL_7.keras\n",
+      "2/2 [==============================] - 4s 41ms/step\n",
+      "2/2 [==============================] - 0s 75ms/step\n",
+      "2/2 [==============================] - 5s 116ms/step\n",
+      "2/2 [==============================] - 0s 101ms/step\n"
      ]
     }
    ],
@@ -198,7 +202,7 @@
     "            placeholder=\"Select a stock\"\n",
     "        )], style={'width': '33%'}),\n",
     "        html.Div([\n",
-    "            html.Label(\"Sequence Length\"),\n",
+    "            html.Label(\"Window Length\"),\n",
     "            dcc.Dropdown(id='seq-length-input', options=[1, 3, 7], value=7),\n",
     "        ], style={'width': '33%'}),\n",
     "        html.Div([\n",
