--- a/ca4/dashboard.ipynb
+++ b/ca4/dashboard.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +67,9 @@
     "        print(f\"RNN Model loaded for {ticker}_{seq_length}.keras\")\n",
     "\n",
     "    data, labels = mlutils.prep_ticker_data(ticker, ticker_df)\n",
-    "    _, X_test, _, _, scaler, split = mlutils.scale_and_split(labels, seq_length)\n",
+    "    X_train, X_test, y_train, y_test, scaler, split = mlutils.scale_and_split(labels, seq_length)\n",
     "\n",
+    "    print(X_test)\n",
     "    predictions = model.predict(X_test)\n",
     "    predictions = scaler.inverse_transform(predictions)\n",
     "\n",
@@ -77,8 +78,8 @@
     "\n",
     "    # Add the actual closing price trace\n",
     "    fig.add_trace(go.Scatter(\n",
-    "        x=ticker_df['date'],\n",
-    "        y=ticker_df['close'][seq_length:],\n",
+    "        x=ticker_df['date'][split + seq_length:],\n",
+    "        y=labels[split + seq_length:].flatten(),\n",
     "        mode='lines',\n",
     "        name='Actual Closing Price',\n",
     "        line=dict(color='blue')\n",
@@ -95,8 +96,11 @@
     "\n",
     "    # Add the predicted closing price trace for new dates\n",
     "    new_dates = pd.date_range(ticker_df['date'][split + seq_length:].iloc[-1], periods=pred_dates_range, freq='D')\n",
-    "    predictions_new = model.predict(X_test)\n",
+    "\n",
+    "    # TODO: FIX THIS\n",
+    "    predictions_new = model.predict(X_test[-1].reshape(1, seq_length, 1))\n",
     "    predictions_new = scaler.inverse_transform(predictions_new)\n",
+    "\n",
     "    fig.add_trace(go.Scatter(\n",
     "        x=new_dates,\n",
     "        y=predictions.flatten(),\n",
@@ -144,7 +148,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_ARIMA(ticker, ticker_df, forecast_steps, exog_forecast):\n",
+    "     # Make predictions\n",
+    "    with open(f'models/arima/{ticker}.pkl', 'rb') as file:\n",
+    "        model = pickle.load(file)\n",
+    "        print(\"Model loaded successfully!\")\n",
+    "    if model:\n",
+    "        print(f\"ARIMA Model loaded for {ticker}.pkl\")\n",
+    "        \n",
+    "    print(exog_forecast)\n",
+    "    forecast = model.get_forecast(steps=forecast_steps, exog=exog_forecast)\n",
+    "\n",
+    "    # Make predictions\n",
+    "    # 'volume', 'bert_score', 'num_tweets'\n",
+    "    new_dates = pd.date_range(ticker_df['date'].iloc[-1], periods=forecast_steps, freq='D')\n",
+    "\n",
+    "    print(\"Forecasted values:\")\n",
+    "    yhat = forecast.predicted_mean\n",
+    "    print(forecast.predicted_mean)\n",
+    "\n",
+    "    print(\"\\nConfidence intervals:\")\n",
+    "    yhat_conf_int = forecast.conf_int(alpha=0.05)\n",
+    "    print(yhat_conf_int)\n",
+    "\n",
+    "    # Create a Plotly figure\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    forecast_dates = ticker_df['date']\n",
+    "\n",
+    "    # Add the actual data trace\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=ticker_df['date'],\n",
+    "        y=ticker_df['close'],\n",
+    "        mode='lines',\n",
+    "        name='Actual'\n",
+    "    ))\n",
+    "\n",
+    "    # Add the forecast trace\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=forecast_dates[-forecast_steps:],\n",
+    "        y=yhat,\n",
+    "        mode='lines',\n",
+    "        name='Forecast'\n",
+    "    ))\n",
+    "\n",
+    "    # Add the confidence interval traces\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=forecast_dates[-forecast_steps:],\n",
+    "        y=yhat_conf_int['lower close'],\n",
+    "        mode='lines',\n",
+    "        name='Lower Confidence Interval',\n",
+    "        line=dict(dash='dash')\n",
+    "    ))\n",
+    "\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=forecast_dates[-forecast_steps:],\n",
+    "        y=yhat_conf_int['upper close'],\n",
+    "        mode='lines',\n",
+    "        name='Upper Confidence Interval',\n",
+    "        line=dict(dash='dash')\n",
+    "    ))\n",
+    "\n",
+    "    # Update the layout\n",
+    "    fig.update_layout(\n",
+    "        title='ARIMAX Model Forecast',\n",
+    "        xaxis_title='Date',\n",
+    "        yaxis_title='Close Price',\n",
+    "        legend=dict(x=0, y=1)\n",
+    "    )\n",
+    "    \n",
+    "    pred_mean = round(forecast.predicted_mean.mean(), 2)\n",
+    "    upper_ci = round(yhat_conf_int['upper close'].mean(), 2)\n",
+    "    lower_ci = round(yhat_conf_int['lower close'].mean(), 2)\n",
+    "    return f\"Predicted closing price for {ticker}: {pred_mean}, upper confidence interval {upper_ci} and lower confidence interval {lower_ci} \", fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -162,25 +247,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x138a45f50>"
+       "<IPython.lib.display.IFrame at 0x13cfb3310>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pulling raw ticker data\n",
-      "Pulling raw ticker data\n",
-      "RNN Model loaded for AAPL_7.keras\n",
-      "RNN Model loaded for AAPL_7.keras\n",
-      "2/2 [==============================] - 4s 41ms/step\n",
-      "2/2 [==============================] - 0s 75ms/step\n",
-      "2/2 [==============================] - 5s 116ms/step\n",
-      "2/2 [==============================] - 0s 101ms/step\n"
-     ]
     }
    ],
    "source": [
@@ -191,34 +262,62 @@
     "\n",
     "app.layout = html.Div([\n",
     "    html.H1(\"Stock Price Prediction Dashboard\"),\n",
+    "        html.Div([\n",
+    "            html.Div([\n",
+    "                html.Div([\n",
+    "                html.Label(\"Ticket Symbol:\"),\n",
+    "                dcc.Dropdown(\n",
+    "                    id='stock-dropdown',\n",
+    "                    options=dropdown_options,\n",
+    "                    value='AAPL',  # Default value\n",
+    "                    placeholder=\"Select a stock\"\n",
+    "                )], style={'width': '50%'}),\n",
     "    \n",
-    "    html.Div([\n",
-    "        html.Div([\n",
-    "        html.Label(\"Ticket Symbol:\"),\n",
-    "        dcc.Dropdown(\n",
-    "            id='stock-dropdown',\n",
-    "            options=dropdown_options,\n",
-    "            value='AAPL',  # Default value\n",
-    "            placeholder=\"Select a stock\"\n",
-    "        )], style={'width': '33%'}),\n",
-    "        html.Div([\n",
-    "            html.Label(\"Window Length\"),\n",
-    "            dcc.Dropdown(id='seq-length-input', options=[1, 3, 7], value=7),\n",
-    "        ], style={'width': '33%'}),\n",
-    "        html.Div([\n",
-    "            html.Label(\"Prediction Days Ahead\"),\n",
-    "            dcc.Input(id='predict-dates-input', type='number', value=40),\n",
-    "        ], style={'width': '33%'}),\n",
-    "    ], style={'margin-top': '20px', 'display': 'flex', 'width': '100%'}),\n",
+    "                html.Div([\n",
+    "                    html.Label(\"Prediction Days Ahead\"),\n",
+    "                    dcc.Input(id='predict-dates-input', type='number', value=7),\n",
+    "                ], style={'width': '50%'}),\n",
+    "            ], style={'margin-top': '20px', 'display': 'flex', 'width': '100%'}),\n",
     "\n",
-    "    html.Button('Predict', id='predict-button', n_clicks=0),\n",
+    "            html.H2(\"RNN Model\"),\n",
+    "            html.Div([\n",
+    "                html.Label(\"Model Rolling Window\"),\n",
+    "                dcc.Dropdown(id='seq-length-input', options=[1, 3, 7], value=7),\n",
+    "            ], style={'width': '33%', 'margin-top': '20px'}),\n",
     "\n",
-    "    # Output Graphs\n",
-    "    html.Div([\n",
-    "        html.Div(id='prediction-output'),\n",
-    "        dcc.Graph(id='prediction-graph-rnn')\n",
-    "    ], style={'margin-top': '20px', 'width': '100%'})\n",
-    "], style={'background': 'white', 'margin': 'auto'})\n",
+    "            html.Button('Predict', id='predict-button', n_clicks=0, style={'margin-top': '20px'}),\n",
+    "\n",
+    "            # Output Graphs\n",
+    "            html.Div([\n",
+    "                html.Div(id='prediction-output'),\n",
+    "                dcc.Graph(id='prediction-graph-rnn')\n",
+    "            ], style={'margin-top': '20px', 'width': '100%'}),\n",
+    "\n",
+    "            html.H2(\"ARIMA Model\"), \n",
+    "            html.P(\"Exogenous Variables: Provide a comma-separated list of values for each variable for the number of days you are predicting, one per each day\"),\n",
+    "            html.Div([\n",
+    "                html.Label(\"Volume\"),\n",
+    "                dcc.Input(id='volume', type='text', value='', style={'width': '100%'}),\n",
+    "            ], style={'width': '100%'}),\n",
+    "            html.Div([\n",
+    "                html.Label(\"BERT Score\"),\n",
+    "                dcc.Input(id='bert_score', type='text', value='', style={'width': '100%'}),\n",
+    "            ], style={'width': '100%'}),\n",
+    "            html.Div([\n",
+    "                html.Label(\"Number of Tweets\"),\n",
+    "                dcc.Input(id='num_tweets', type='text', value='', style={'width': '100%'}),\n",
+    "            ], style={'width': '100%'}),\n",
+    "\n",
+    "            html.Button('Predict', id='predict-button-arima', n_clicks=0, style={'margin-top': '20px'}),\n",
+    "            # Output Graphs\n",
+    "            html.Div([\n",
+    "                html.Div(id='prediction-output-arima'),\n",
+    "                dcc.Graph(id='prediction-graph-arima')\n",
+    "            ], style={'margin-top': '20px', 'width': '100%'}),\n",
+    "\n",
+    "    ]),\n",
+    "\n",
+    "], style={'background': 'white', 'margin': '3%'})\n",
     "\n",
     "@app.callback(\n",
     "    [Output('prediction-output', 'children'),\n",
@@ -229,7 +328,7 @@
     "     Input('seq-length-input', 'value'),\n",
     "     Input('predict-dates-input', 'value')]\n",
     ")\n",
-    "def update_prediction(n_clicks, ticker, seq_length, pred_dates_range):\n",
+    "def update_predict_RNN(n_clicks, ticker, seq_length, pred_dates_range):\n",
     "    if n_clicks == 0:\n",
     "        return \"\", {}\n",
     "\n",
@@ -239,8 +338,52 @@
     "    pred_price, graph_rnn = predict_RNN(ticker_df, ticker, seq_length, pred_dates_range)\n",
     "    return pred_price, graph_rnn\n",
     "\n",
+    "\n",
+    "@app.callback(\n",
+    "    [Output('prediction-output-arima', 'children'),\n",
+    "     Output('prediction-graph-arima', 'figure')],\n",
+    "\n",
+    "    [Input('predict-button-arima', 'n_clicks')],\n",
+    "    [Input('stock-dropdown', 'value'),\n",
+    "     Input('predict-dates-input', 'value'),\n",
+    "     Input('volume', 'value'),\n",
+    "     Input('bert_score', 'value'),\n",
+    "     Input('num_tweets', 'value')]\n",
+    ")\n",
+    "def update_predict_ARIMA(n_clicks, ticker, forecast_steps, volume, bert_score, num_tweets):\n",
+    "    if n_clicks == 0:\n",
+    "        return \"\", {}\n",
+    "\n",
+    "   # Load the raw data for graphing\n",
+    "    ticker_df = get_all_ticker_data(ticker)\n",
+    "\n",
+    "    # Create DataFrame from the provided exogenous variables\n",
+    "    # 'volume', 'bert_score', 'num_tweets'\n",
+    "\n",
+    "    exog_forecast = pd.DataFrame({\n",
+    "        'volume': [v for v in volume.split(',')],\n",
+    "        'bert_score': [v for v in bert_score.split(',')],\n",
+    "        'num_tweets': [v for v in num_tweets.split(',')]\n",
+    "    })\n",
+    "    exog_forecast = exog_forecast.astype(float)\n",
+    "    pred_price, graph_arima = predict_ARIMA(ticker, ticker_df, forecast_steps, exog_forecast)\n",
+    "    return pred_price, graph_arima\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Can be used for ARIMA testing / demo \n",
+    "# AAPL stock\n",
+    "# [168904800, 88223700, 54930100, 124486200, 121047300, 96452100, 99116600]\n",
+    "# [0.0, 0.6901094913482666, 0.7551156282424927, 0.9880950450897217, 0.677986741065979, 0.4352254867553711, 0.8095578551292419]\n",
+    "# [20.0, 3.0, 1.0, 2.0, 2.0, 1.0, 3.0]"
    ]
   },
   {
